--- a/ServerApp/ServerApp/wwwroot/question2.html
+++ b/ServerApp/ServerApp/wwwroot/question2.html
@@ -1,1 +1,11 @@
-question 2 not via SvelteKit
+<div style="display:flex; flex-direction:row">
+    <div style="display: flex; flex-direction: column; row-gap: 20px; width: 400px">
+        <a href="/introduction">introduction (sveltekit)</a>
+        <a href="/question1">question1 (sveltekit)</a>
+        <a href="/question2.html">question2 (legacy)</a>
+        <a href="/question3.html">question3 (legacy)</a>
+    </div>
+    <div>question 2 not via SvelteKit</div>
+</div>
+
+
